# OpenNodia

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  INSTALL.md  NOTICE  README.ja.md  README.ko.md  README.md  README.zh.md  SECURITY.md  docker-compose.yml  opennodia.sample.toml
.githooks/: pre-commit
crates/opennodia-amm/: Cargo.toml
crates/opennodia-amm/examples/: print_contract.rs
crates/opennodia-amm/src/: contract.rs  lib.rs  transactions.rs
crates/opennodia-assets/: Cargo.toml
crates/opennodia-assets/src/: lib.rs  policy.rs
crates/opennodia-core/: Cargo.toml
crates/opennodia-core/src/: address.rs  amount.rs  asset.rs  error.rs  lib.rs  network.rs  round.rs
crates/opennodia-dex/: Cargo.toml
crates/opennodia-dex/src/: cache.rs  db.rs  events.rs  lib.rs  orderbook.rs  types.rs
crates/opennodia-node/: Cargo.toml
crates/opennodia-node/src/: algod.rs  asset.rs  indexer.rs  kmd.rs  lib.rs  params.rs  status.rs
crates/opennodia-server/: Cargo.toml
crates/opennodia-server/src/: api_error.rs  asa.rs  asa_history.rs  asset_metadata.rs  auth.rs  community_dex.rs  config.rs  dex.rs  dex_validation.rs  external_liquidity.rs  intent.rs  lib.rs  lp.rs  main.rs  market.rs  middleware.rs  mnemonic.rs  participation.rs  router.rs  routes.rs  session.rs  state.rs  sync.rs  transfer.rs  tx_flow.rs  wallet.rs  wallet_history.rs  workers.rs
crates/opennodia-server/src/dex/: asset_policy.rs  dto.rs  order_handlers.rs  order_link.rs  orderbook_depth.rs  read_handlers.rs  reconcile.rs  route_handlers.rs  route_quotes.rs
crates/opennodia-server/src/external_liquidity/: accounts.rs  drafts.rs  dto.rs  folks.rs  math.rs  pact.rs  positions.rs  quote_math.rs  read_handlers.rs  sources.rs  teal_state.rs  tinyman.rs  tx_groups.rs  write_handlers.rs
crates/opennodia-server/src/lp/: accounts.rs  contracts.rs  drafts.rs  dto.rs  guards.rs  intent.rs  pools.rs  prepare_handlers.rs  quote_handler.rs  registry.rs  route_quotes.rs  submit_handlers.rs
crates/opennodia-server/src/router/: dto.rs  evidence.rs  handlers.rs  quotes.rs  selection.rs
crates/opennodia-server/src/routes/: account.rs  analytics.rs  auth.rs  events.rs  history.rs  market.rs  node.rs  wallets.rs
crates/opennodia-swap/: Cargo.toml
crates/opennodia-swap/examples/: validate_codec.rs  validate_contracts.rs
crates/opennodia-swap/src/: cancel.rs  create.rs  escrow.rs  fill.rs  lib.rs  link.rs  matching.rs  order.rs  tx.rs  verify.rs
docker/: algod-entrypoint.sh  algod-follower-entrypoint.sh  conduit-entrypoint.sh  conduit.yml  http-healthcheck.pl  indexer-bootstrap.sh  indexer-entrypoint.sh  indexer-pruner.sh  indexer-schema-v3.9.0.sql  opennodia-entrypoint.sh  secret-utils.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  amount.js  amount.test.js  api.js  apiSession.test.js  app.css  assetMetadata.js  assetMetadata.test.js  dexViewModel.test.js  lpTradeViewModel.test.js  nav.js  nav.test.js  orderLinkState.js  orderLinkState.test.js  qaEvidence.js  qaEvidence.test.js  tradeState.js  tradeState.test.js  walletStore.js
frontend/src/api/: accounts.js  analytics.js  assets.js  auth.js  client.js  dex.js  lp.js  market.js  transfers.js  wallets.js
frontend/src/i18n/: en.js  index.js  ja.js  ko.js  zh.js
frontend/src/lib/: AppShell.svelte  AsaIssueView.svelte  AssetSearch.svelte  AssetsView.svelte  DEXView.svelte  LPTradeView.svelte  LanguageSelector.svelte  LockScreen.svelte  NodeView.svelte  OptInModal.svelte  QuoteStatus.svelte  ReceiveModal.svelte  SettingsView.svelte  Sidebar.svelte  TransferModal.svelte  WalletModal.svelte  WalletSelector.svelte  WalletsView.svelte
frontend/src/lib/dex/: ChartPanel.svelte  CommunityMarketsPanel.svelte  MarketHeader.svelte  MobileTradingTabs.svelte  MyOrdersPanel.svelte  OrderBookPanel.svelte  OrderFormPanel.svelte  OrderLinkPanel.svelte  PopularPairsNav.svelte  RecentTradesPanel.svelte  RouteCandidatesPanel.svelte  viewModel.js
frontend/src/lib/dex/modals/: CancelConfirmModal.svelte  CreateConfirmModal.svelte  FillConfirmModal.svelte
frontend/src/lib/lpTrade/: AddLiquidityCard.svelte  BootstrapPoolCard.svelte  CreatePoolCard.svelte  DiscoverPoolsCard.svelte  LoadPoolCard.svelte  PoolDetailCard.svelte  PositionPanel.svelte  RemoveLiquidityCard.svelte  SetupPoolCard.svelte  SwapQuoteCard.svelte  viewModel.js
scripts/: check-secrets.sh  init-secrets.ps1  init-secrets.sh
scripts/ci/: shellcheck.sh  trivy-config.sh
scripts/qa/: README.md  check.sh  dex_db_report.py  native_amm_readiness.py  pact_factory_report.py  public-release-evidence.schema.json  public_release_evidence.py  release-readiness.sh  testnet-evidence.json  testnet_plan_evidence.py  testnet_plan_readiness.py
scripts/release/: audit.sh  checksums.sh  licenses.sh  provenance.sh  sbom.sh  sign.sh  verify-release.sh
