[workspace]
resolver = "2"
members = [
    "crates/opennodia-core",
    "crates/opennodia-node",
    "crates/opennodia-assets",
    "crates/opennodia-amm",
    "crates/opennodia-swap",
    "crates/opennodia-dex",
    "crates/opennodia-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/AbaloneLabs/OpenNodia"
description = "Self-hosted DEX node for Algorand assets"

[workspace.dependencies]
# Internal crates
opennodia-core = { path = "crates/opennodia-core" }
opennodia-node = { path = "crates/opennodia-node" }
opennodia-assets = { path = "crates/opennodia-assets" }
opennodia-amm = { path = "crates/opennodia-amm" }
opennodia-swap = { path = "crates/opennodia-swap" }
opennodia-dex = { path = "crates/opennodia-dex" }

# Common dependencies
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"

# Web server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Security
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# HTTP client (algod)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Config & logging
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
time = { version = "0.3", features = ["serde"] }
once_cell = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio-postgres = { version = "=0.7.18", features = ["with-serde_json-1"] }

# DEX-specific
rusqlite = { version = "0.31", features = ["bundled"] }
rmp-serde = "1"
