[package]
name = "opennodia-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Algorand node (algod) client and ledger connector for OpenNodia"

[dependencies]
opennodia-core.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64.workspace = true
