[package]
name = "opennodia-swap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Atomic swap transaction builder for OpenNodia DEX"

[dependencies]
opennodia-core.workspace = true
opennodia-node.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
rmp-serde.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true

[features]
default = []
# Enable the algod-backed dry-run validation framework (requires network).
testing = []
